...
    case saveNow = "Save Now"
    case autosaveSettings = "Autosave Settings…"
    case cancelSave = "Cancel Save"
    case checkAgain = "Check Again"
    case saveACopy = "Save a Copy…"
    case resolve = "Resolve…"
    case tryAgain = "Try Again"
    case saveACopyElsewhere = "Save a Copy Elsewhere…"
    case details = "Details"
    case keepThisVersion = "Keep This Version"
    case showKeptFiles = "Show Kept Files in Finder"
    case closeShow = "Close Show"
    case revertToEarlierVersion = "Revert To an Earlier Version…"
    case showDetails = "Show Details"
...
